@@ -528,18 +528,18 @@
   <string><id>1396</id><value>Drifting</value></string>
   <string><id>1397</id><value>and</value></string>
   <string><id>1398</id><value>Freezing</value></string>
-  <string><id>1399</id><value>N/A</value></string>
-  <string><id>1400</id><value>N/A</value></string>
-  <string><id>1401</id><value>N/A</value></string>
-  <string><id>1402</id><value>N/A</value></string>
-  <string><id>1403</id><value>N/A</value></string>
-  <string><id>1404</id><value>N/A</value></string>
-  <string><id>1405</id><value>N/A</value></string>
-  <string><id>1406</id><value>N/A</value></string>
-  <string><id>1407</id><value>N/A</value></string>
-  <string><id>1408</id><value>N/A</value></string>
-  <string><id>1409</id><value>N/A</value></string>
-  <string><id>1410</id><value>N/A</value></string>
+  <string><id>1399</id><value>Late</value></string>
+  <string><id>1400</id><value>Isolated</value></string>
+  <string><id>1401</id><value>T-Showers</value></string>
+  <string><id>1402</id><value>Thunder</value></string>
+  <string><id>1403</id><value>Sun</value></string>
+  <string><id>1404</id><value>Heavy</value></string>
+  <string><id>1405</id><value>in</value></string>
+  <string><id>1406</id><value>the</value></string>
+  <string><id>1407</id><value>Vicinity</value></string>
+  <string><id>1408</id><value>Ice</value></string>
+  <string><id>1409</id><value>Crystals</value></string>
+  <string><id>1410</id><value>Calm</value></string>
 
   <string><id>10000</id><value>Home</value></string>
   <string><id>10001</id><value>My Programs</value></string>
